# pignode-wildfire

./: .gitignore  README.md  pyproject.toml
docs/: paper.aux  paper.fls  paper.out  paper.tex
docs/figures/: schematic.tex
experiments/_figures/: results_table.csv  results_table.tex
experiments/pignode_full/: best.pt  curves.csv  log.txt  metrics.json
experiments/pignode_high_elev/: best.pt  eval_test_high_elev.json
experiments/pignode_low_elev/: best.pt  eval_test_high_elev.json  metrics.json
experiments/pignode_no_mono/: best.pt  curves.csv  log.txt  metrics.json
experiments/pignode_uniform_full/: best.pt  curves.csv  log.txt  metrics.json
notebooks/: colab_region_split.ipynb
region_split_results/pignode_high_elev/: eval_test_low_elev.json  metrics.json
region_split_results/pignode_low_elev/: eval_test_low_elev.json
scripts/: ablations.sh  download_tssatfire.sh  fetch_neurips_style.sh  resume_pignode.sh  run_all.sh  run_final.sh  run_new_experiments.sh  run_pignode.sh  run_pignode_full.sh  run_pignode_main_5k.sh  run_region_split.sh  run_uniform_full.sh  sweep.sh
src/wildfire/: baselines_run.py  eval_region.py  figures.py  graph.py  losses.py  metrics.py  render_ndws_movie.py  render_rollout.py  rollout.py  train.py
src/wildfire/data/: ndws.py  tssatfire.py
src/wildfire/models/: baselines.py  gnns.py  pignode.py
